--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,6 @@
 <html>
   <head>
     <title>Dealnews Filter</title>
-    <script src="popup.js"></script>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -25,6 +24,8 @@
   <body>
     <h1>Dealnews Filter</h1>
     <p>Hide deals from certain merchants.</p>
-    <div id="SitesToBlock">"SheIn","Groupon","Talbots","Micro","Perfumania","A4C","Venus","Ashford","Jos.","FreedomPop"</div>
+    <input id="SitesToBlock" value='"SheIn","Groupon","Talbots","Micro","Perfumania","A4C","Venus","Ashford","Jos.","FreedomPop"' />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
